[package]
name = "rustproxy-cli"
description = "rustproxy-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dirs = { version = "5.0.1", default-features = false }
toml_edit = { version = "0.22.22", default-features = false, features = ["display", "parse"] }
